Fix alignments in update component

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -85,3 +85,22 @@ input {
   margin-bottom: 30px;
 }
 
+.radio {
+  margin-top: 35px;
+  margin-bottom: 20px;
+}
+
+.advise{
+  text-align: center;
+  margin-bottom: 20px;
+  margin-top: 10px;
+  font-weight: bold;
+  font-size: 17px;
+}
+
+.updateSection{
+  background-color: #f8f9fd;
+  width: 350px;
+  height: 450px;
+  border-radius: 20px;
+}
